<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/star"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_papelera"
            android:icon="@drawable/bin"
            android:title="@string/paper_bin" />
        <item
            android:id="@+id/nav_shared"
            android:icon="@drawable/icon_shared"
            android:title="@string/shared" />

    </group>
    <item android:title="Configuration">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/icon_profile"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_signOut"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/sign_out" />
            </group>
            </menu>
    </item>
</menu>